@@ -7,26 +7,37 @@
         <version>1.3.0</version>
     </parent>
 
-    <artifactId>entity-api</artifactId>
+    <artifactId>entity-graphql</artifactId>
+
+    <properties>
+        <surefire.argline.opens>
+            --add-opens fr.ght1pc9kc.entity.graphql/fr.ght1pc9kc.entity.graphql=com.fasterxml.jackson.databind
+        </surefire.argline.opens>
+    </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>fr.ght1pc9kc</groupId>
+            <artifactId>entity-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.ght1pc9kc</groupId>
+            <artifactId>entity-jackson</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
+            <groupId>com.graphql-java</groupId>
+            <artifactId>graphql-java</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -37,6 +48,11 @@
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
